--- a/index.html
+++ b/index.html
@@ -15,57 +15,87 @@
       font-family: sans-serif;
       background-color: #ededed;
     }
+
+.topbuttons {
+  display: block;
+  text-align: center;
+}
+
+  button {
+    font-size: 24px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    background-color: #94FEFB;
+    font-family: "Monaco", Monospace;
+    border: 4px solid pink;
+    border-radius: 20px;
+}
+
+    .summary:hover,
+    .summary:focus,
+    .topbuttons button:hover,
+    .topbuttons button:focus {
+      color: hotpink;
+      background-color: #94FEFB;
+}
+    .summary:active,
+    .topbuttons button:active {
+      color: #94FEFB;
+      background-color: #ec72fc
+}
+
   </style>
   <title>my-card</title>
 </head>
 
 <body>
+  <div class="topbuttons">
+    <button class="Duplicate">New duplicate</button>
+    <button id="Color">Toggle color</button>
+    <button id="Header">Change heading</button>
+    <button id="Delete">Delete 1 card</button>
+  </div>
   <my-card></my-card>
 
   <script type="module" src="./src/my-card.js"></script>
 <!-----------------------------------JS-CUTOFF-------------------------------------------------------------------------------------------->
-  <script> 
-
-  //document.querySelector('my-card').shadowRoot.querySelector
-
-  //New duplicate button 
-document.querySelector('.Duplicate').addEventListener('click', function(e) {
-  const node1 = document.querySelector('.card').cloneNode(true);
+  <script>
+//New duplicate button
+document.querySelector('.Duplicate').addEventListener('click', function() {
+  const node1 = document.querySelector('my-card').cloneNode();
   document.body.appendChild(node1);
 });
 
 //Color toggle button
-document.querySelector('my-card').shadowRoot.querySelector('#Color').addEventListener('click', function() {
+document.querySelector('#Color').addEventListener('click', function() {
+if (document.querySelector('my-card').shadowRoot.getElementById("card1").className == "card")
   document.querySelector('my-card').shadowRoot.getElementById("card1").className = "alt";
-  if (document.querySelector('my-card').shadowRoot.getElementById("card1").className == "card")
-    document.querySelector('my-card').shadowRoot.getElementById("card1").className = "alt";
-  else
-    document.querySelector('my-card').shadowRoot.getElementById("card1").className = "card";
+else
+  document.querySelector('my-card').shadowRoot.getElementById("card1").className = "card";
 });
 
 //Header toggle button
 document.querySelector('#Header').onclick = function() {
-  if (document.querySelector('my-card').shadowRoot.getElementById('header1').innerHTML == 'Team Fortress 2 Pyroland')
-    document.querySelector('my-card').shadowRoot.getElementById('header1').innerHTML = 'Sussy amogus';
-  else
-    document.querySelector('my-card').shadowRoot.getElementById('header1').innerHTML = 'Team Fortress 2 Pyroland';
+if (document.querySelector('my-card').shadowRoot.getElementById('header1').innerHTML == 'Team Fortress 2 Pyroland')
+  document.querySelector('my-card').shadowRoot.getElementById('header1').innerHTML = 'Sussy amogus';
+else
+  document.querySelector('my-card').shadowRoot.getElementById('header1').innerHTML = 'Team Fortress 2 Pyroland';
 };
 
 //Delete button
 document.querySelector('#Delete').addEventListener('click', function() {
-  const list1 = [];
-  var onetime = false;
-  document.querySelectorAll('.card').forEach((item, index) => {
-    list1.push(index);
-    if (list1.length != 1 && onetime === false) {
-      item.remove();
-      onetime = true;
-    }
-  });
+const list1 = [];
+var onetime = false;
+document.querySelectorAll('my-card').forEach((item, index) => {
+  list1.push(index);
+  if (list1.length != 1 && onetime === false) {
+    item.remove();
+    onetime = true;
+  }
+});
 });
   </script>
 <!-----------------------------------JS-CUTOFF-------------------------------------------------------------------------------------------->
 
 </body>
-
 </html>
