--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="Description" content="Put your description here.">
   <base href="/">
 
+  <script>
+    window.__appCDN = "https://cdn.webcomponents.psu.edu/cdn/";
+  </script>
+  <script src="https://cdn.webcomponents.psu.edu/cdn/build.js"></script>
+  <script type="module" src="meme-maker.js"></script>
+
   <style>
     html,
     body {
