--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
   <title>my-card</title>
 </head>
 
+<meme-maker alt="Cat stalking a small toy" image-url="https://cdn2.thecatapi.com/images/9j5.jpg" top-text="I bring you" bottom-text="the death">
+</meme-maker>
 <body>
   <div class="topbuttons">
     <button class="Duplicate">New duplicate</button>
