--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
     <button class="Header">Change heading</button>
     <button class="Delete">Delete 1 card</button>
   </div>
-  <my-card></my-card>
+  <my-card>
+  </my-card>
 
   <script type="module" src="./src/my-card.js"></script>
+  <script type="module" src="./src/MyCard.js"></script>
 <!-----------------------------------JS-CUTOFF-------------------------------------------------------------------------------------------->
   <script>
 //New duplicate button
