--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
   <meta name="Description" content="Put your description here.">
   <base href="/">
 
-  <script>
-    window.__appCDN = "https://cdn.webcomponents.psu.edu/cdn/";
-  </script>
-  <script src="https://cdn.webcomponents.psu.edu/cdn/build.js"></script>
-  <script type="module" src="meme-maker.js"></script>
-
   <style>
     html,
     body {
@@ -59,10 +53,10 @@
     <button class="Delete">Delete 1 card</button>
   </div>
   <my-card>
+  <slot>This is a screenshot from a 3D rendered animation posted to Youtube by Valve Corporation to promote the video-game Team Fortress 2. The video is called 'Meet the Pyro'</slot>
   </my-card>
 
   <script type="module" src="./src/my-card.js"></script>
-  <script type="module" src="./src/MyCard.js"></script>
 <!-----------------------------------JS-CUTOFF-------------------------------------------------------------------------------------------->
   <script>
 //New duplicate button
@@ -71,6 +65,11 @@ document.querySelector('.Duplicate').addEventListener('click', function() {
   document.body.appendChild(node1);
 });
 
+/*document.querySelector('.Duplicate').addEventListener('click', function() {
+  const node1 = document.querySelector('my-card').cloneNode();
+  document.body.appendChild(node1);
+});
+*/
 //Color toggle button
 document.querySelector('.Color').addEventListener('click', function() {
 if (document.querySelector('my-card').shadowRoot.getElementById("card1").className == "card")
